// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly hide in web 1`] = `<div />`;

exports[`should render correctly initially no warning 1`] = `
<div>
  <div
    class="subtitle"
  >
    Auto Save
  </div>
  <div>
    mock-select-control id:
    set-auto-save
    label:
    Auto Save
    options:
    [{"value":"TRUE","label":"On","selected":false},{"value":"FALSE","label":"Off","selected":true}]
    <input
      class="select-control"
    />
  </div>
  <mock-control
    label="Auto Save Location"
  >
    <div>
      mock-path-input id:
      location-input
      buttonTitle:
      Choose Folder
      type:
      1
      defaultValue:
      /MyDocuments
      forceValidValue:
      false
      className:
      ""
      <input
        class="path-input"
      />
    </div>
  </mock-control>
  <mock-control
    label="Save Every"
  >
    <div>
      mock-unit-input id:
      save-every
      unit:
      m
      min:
      1
      max:
      60
      defaultValue:
      10
      forceUsePropsUnit:
      false
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
  </mock-control>
  <mock-control
    label="Number of Auto Save"
  >
    <div>
      mock-unit-input id:
      number-of-auto-save
      unit:
      min:
      1
      max:
      10
      defaultValue:
      5
      forceUsePropsUnit:
      false
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
  </mock-control>
</div>
`;

exports[`should render correctly initially with warning 1`] = `
<div>
  <div
    class="subtitle"
  >
    Auto Save
  </div>
  <div>
    mock-select-control id:
    set-auto-save
    label:
    Auto Save
    options:
    [{"value":"TRUE","label":"On","selected":false},{"value":"FALSE","label":"Off","selected":true}]
    <input
      class="select-control"
    />
  </div>
  <mock-control
    label="Auto Save Location"
    warningtext="Specified path not found."
  >
    <div>
      mock-path-input id:
      location-input
      buttonTitle:
      Choose Folder
      type:
      1
      defaultValue:
      /FolderNotExist
      forceValidValue:
      false
      className:
      "with-error"
      <input
        class="path-input"
      />
    </div>
  </mock-control>
  <mock-control
    label="Save Every"
  >
    <div>
      mock-unit-input id:
      save-every
      unit:
      m
      min:
      1
      max:
      60
      defaultValue:
      10
      forceUsePropsUnit:
      false
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
  </mock-control>
  <mock-control
    label="Number of Auto Save"
  >
    <div>
      mock-unit-input id:
      number-of-auto-save
      unit:
      min:
      1
      max:
      10
      defaultValue:
      5
      forceUsePropsUnit:
      false
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
  </mock-control>
</div>
`;
